# Image_Processor

./: .gitignore  CMakeLists.txt
Src/: main.cpp
